op_3896/ace-ecollection.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2021-01-05T12:50:47Z
  generation: 1
  labels:
    app: ace-ecollection
  name: ace-ecollection
  namespace: bharathi-testing
  resourceVersion: "139522825"
  selfLink: /apis/extensions/v1beta1/namespaces/bharathi-testing/deployments/ace-ecollection
  uid: a1dc78c5-4f54-11eb-9dfa-000d3af2f6a6
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ace-ecollection
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ace-ecollection
    spec:
      containers:
      - env:
        - name: LICENSE
          value: accept
        - name: MQ_QMGR_NAME
          value: LQM.IXC
        - name: MQSI_PERSISTENT_MONITORING_EVENTS
          value: "1"
        image: registry.ixpress.icicibank.com:5000/ibm-ace-gold-prod
        imagePullPolicy: Always
        name: ace-ecollection
        ports:
        - containerPort: 7600
          protocol: TCP
        - containerPort: 1414
          protocol: TCP
        - containerPort: 7800
          protocol: TCP
        - containerPort: 7843
          protocol: TCP
        - containerPort: 9157
          protocol: TCP
        - containerPort: 9443
          protocol: TCP
        - containerPort: 9483
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/aceuser/build
          name: aceuser
        - mountPath: /home/aceuser/ace-server/log
          name: volume-1
        - mountPath: /home/aceuser/ace-server/run
          name: volume-2
        - mountPath: /home/aceuser/ace-server/overrides
          name: volume-3
        - mountPath: /home/aceuser/ace-server/shared-classes
          name: volume-4
        - mountPath: /mnt/mqm
          name: volume-5
      dnsPolicy: ClusterFirst
      hostAliases:
      - hostnames:
        - icici-elk.apps.nonprod.iciciltd.com
        ip: 172.19.65.72
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: aceuser
        persistentVolumeClaim:
          claimName: ace-dev-ace-ecollection-build-pvc
      - name: volume-1
        persistentVolumeClaim:
          claimName: ace-dev-ace-ecollection-logs-pvc
      - name: volume-2
        persistentVolumeClaim:
          claimName: ace-dev-ace-ecollection-run-pvc
      - name: volume-3
        persistentVolumeClaim:
          claimName: ace-dev-ace-ecollection-overrides-pvc
      - name: volume-4
        persistentVolumeClaim:
          claimName: ace-dev-ace-ecollection-shared-classes-pvc
      - name: volume-5
        persistentVolumeClaim:
          claimName: ace-dev-ace-ecollection-data-pvc-nfs
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2021-01-05T12:50:47Z
    lastUpdateTime: 2021-01-05T12:50:47Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: 2021-01-05T12:50:47Z
    lastUpdateTime: 2021-01-05T12:54:43Z
    message: ReplicaSet "ace-ecollection-575f4d68cf" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
