op_3896/ace-test.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: 2021-02-10T01:59:14Z
  generation: 1
  labels:
    app: ace-test
  name: ace-test
  namespace: bharathi-testing
  resourceVersion: "133764676"
  selfLink: /apis/apps.openshift.io/v1/namespaces/bharathi-testing/deploymentconfigs/ace-test
  uid: 93975ea8-6b43-11eb-9dfa-000d3af2f6a6
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: ace-test
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: ace-test
      name: ace-test
    spec:
      containers:
      - env:
        - name: LICENSE
          value: accept
        - name: USE_QMGR
          value: "false"
        - name: ACE_SERVER_NAME
          value: ACESERVER
        - name: SERVICE_NAME
          value: ace-test
        - name: LOG_FORMAT
          value: json
        - name: ACE_ENABLE_METRICS
          value: "true"
        - name: MQ_QMGR_NAME
          value: LQM.IXC
        image: registry.ixpress.icicibank.com:5000/ibmcomace
        imagePullPolicy: Always
        name: ace-test
        ports:
        - containerPort: 7600
          protocol: TCP
        - containerPort: 7800
          protocol: TCP
        - containerPort: 7843
          protocol: TCP
        - containerPort: 1414
          protocol: TCP
        - containerPort: 9157
          protocol: TCP
        - containerPort: 9443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: webusers
        name: webusers
      - configMap:
          defaultMode: 420
          name: policy
        name: policy
  test: false
  triggers:
  - type: ConfigChange
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2021-02-10T01:59:21Z
    lastUpdateTime: 2021-02-10T01:59:28Z
    message: replication controller "ace-test-1" successfully rolled out
    reason: NewReplicationControllerAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: 2021-02-17T15:39:11Z
    lastUpdateTime: 2021-02-17T15:39:11Z
    message: Deployment config has minimum availability.
    status: "True"
    type: Available
  details:
    causes:
    - type: ConfigChange
    message: config change
  latestVersion: 1
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
