op_3896/httpd.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: 2021-02-18T10:10:26Z
  generation: 1
  labels:
    app: httpd
  name: httpd
  namespace: ixc-dev
  resourceVersion: "135833126"
  selfLink: /apis/apps.openshift.io/v1/namespaces/ixc-dev/deploymentconfigs/httpd
  uid: 85a21a19-71d1-11eb-a1b8-000d3af20c19
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: httpd
    deploymentconfig: httpd
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: httpd
        deploymentconfig: httpd
    spec:
      containers:
      - image: registry.ixpress.icicibank.com:5000/ixc-httpd:2.4
        imagePullPolicy: IfNotPresent
        name: httpd
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2021-02-18T10:10:35Z
    lastUpdateTime: 2021-02-18T10:11:02Z
    message: replication controller "httpd-1" successfully rolled out
    reason: NewReplicationControllerAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: 2021-02-19T13:25:43Z
    lastUpdateTime: 2021-02-19T13:25:43Z
    message: Deployment config has minimum availability.
    status: "True"
    type: Available
  details:
    causes:
    - type: ConfigChange
    message: config change
  latestVersion: 1
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
